# galaxy-labs-engine

./: .env.sample  .gitignore  CLAUDE.md  Dockerfile  LAB_BUILDER.md  MANIFEST.in  README.md  docker-build-and-push.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  task.md
.claude/: task.md
.github/workflows/: ansible-deploy-dev.yml  ansible-deploy.yml  claude-code-review.yml  deploy-dev.yml  deploy.yml  django-tests.yml  docker-build.yml
ansible/: .gitignore  .vault.pass  ansible.cfg  dev.yml  hosts  prod.yml  requirements.yml
ansible/files/: webapp.socket
ansible/group_vars/: VAULT  VAULT.sample  webservers.yml  webservers.yml.sample
ansible/host_vars/: labs.neoformit.com.yml
app/: manage.py
app/app/: cli.py  settings.py  test.py  urls.py  wsgi.py
app/app/settings/: base.py  build.py  cli.py  dev.py  prod.py  test.py
app/labs/: api.py  audit.py  bootstrap.py  cache.py  context_processors.py  example_labs  forms.py  lab_export.py  lab_schema.py  models.py  tests.py  urls.py  validators.py  views.py
app/labs/templates/: 403.html  404.html
app/labs_engine/app/: asgi.py  cli.py  test.py  urls.py  wsgi.py
app/labs_engine/labs/: api.py  apps.py  audit.py  bootstrap.py  cache.py  forms.py  lab_export.py  models.py  tasks.py  tests.py  urls.py  views.py
app/utils/: exceptions.py  paths.py  runserver.py
generate/: fetch_tool_inputs.py  instructions.md  reference.md
scripts/: labs_tool_requests.py  post_nginx_logs.sh  user_metrics.py
scripts/workflow_monitor/: .lsyncd.lua  extract_workflow_invocations.py  requirements.txt
(+134 files in other folders)
